Delete getFirst method